crates/rcc_cfg/tests/snapshots/cfg/edge_goto_out_nested_scope.snap
---
source: crates/rcc_cfg/tests/cfg.rs
assertion_line: 374
---
fn def#0() -> int {
  locals:
    _0: int;
    _1: int param name#19;
    _2: int name#20;
    _3: int name#21;

  bb0:
    StorageLive(_2);
    _2 = 0;
    StorageLive(_3);
    _3 = 1;
    switchInt(copy _1) -> [0: bb3, otherwise: bb2];

  bb1:
    _0 = copy _2;
    StorageDead(_2);
    return;

  bb2:
    StorageDead(_3);
    goto -> bb1;

  bb3:
    _2 = copy _3;
    StorageDead(_3);
    goto -> bb1;

}
