crates/rcc_cfg/tests/snapshots/cfg/if_else.snap
---
source: crates/rcc_cfg/tests/cfg.rs
assertion_line: 350
---
fn def#0() -> int {
  locals:
    _0: int;
    _1: int param name#19;
    _2: int name#20;

  bb0:
    StorageLive(_2);
    _2 = 0;
    switchInt(copy _1) -> [0: bb2, otherwise: bb1];

  bb1:
    _2 = 1;
    goto -> bb3;

  bb2:
    _2 = 2;
    goto -> bb3;

  bb3:
    _0 = copy _2;
    StorageDead(_2);
    return;

}
