crates/rcc_cfg/tests/snapshots/cfg/loop_break_continue.snap
---
source: crates/rcc_cfg/tests/cfg.rs
---
fn def#0() -> int {
  locals:
    _0: int;
    _1: int param name#19;
    _2: int name#20;
    _3: int;
    _4: int;
    _5: int;

  bb0:
    StorageLive(_2);
    _2 = 0;
    goto -> bb1;

  bb1:
    _3 = SLt(copy _2, copy _1);
    switchInt(copy _3) -> [0: bb2, otherwise: bb3];

  bb2:
    _0 = copy _2;
    StorageDead(_2);
    return;

  bb3:
    _4 = Add(copy _2, 1);
    _2 = copy _4;
    _5 = Eq(copy _2, 3);
    switchInt(copy _5) -> [0: bb5, otherwise: bb4];

  bb4:
    goto -> bb2;

  bb5:
    goto -> bb1;

}
