crates/rcc_cfg/tests/snapshots/cfg/switch_fallthrough.snap
---
source: crates/rcc_cfg/tests/cfg.rs
---
fn def#0() -> int {
  locals:
    _0: int;
    _1: int param name#19;
    _2: int name#20;

  bb0:
    StorageLive(_2);
    _2 = 0;
    goto -> bb1;

  bb1:
    switchInt(copy _1) -> [1: bb2, 2: bb3, otherwise: bb4];

  bb2:
    _2 = 1;
    goto -> bb3;

  bb3:
    _2 = 2;
    goto -> bb4;

  bb4:
    _2 = 3;
    goto -> bb5;

  bb5:
    _0 = copy _2;
    StorageDead(_2);
    return;

}
